--- a/styles/index.css
+++ b/styles/index.css
@@ -16,7 +16,19 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
 }
+.icon-github{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  margin: 10px;
+}
 
+.icon-github img{
+  width: 100%;
+  height: 100%;
+}
 #areaLogin {
   display: flex;
   justify-content: space-evenly;
