--- a/styles/dashboardPages.css
+++ b/styles/dashboardPages.css
@@ -230,6 +230,7 @@ header {
   background-color: var(--items-color);
   border: 2px solid #acacac;
   border-radius: 20px;
+  text-align: center;
 }
 #basicInfo {
   width: 100%;
@@ -248,6 +249,11 @@ header {
   border-radius: 20px 20px 0px 0px;
 }
 
+#photo img {
+  height: 180px;
+  width: 100%;
+  padding: 5px;
+}
 #studentPerformance {
   width: 100%;
   height: 600px;
@@ -255,7 +261,6 @@ header {
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
- 
 }
 
 #studentPerformance div {
@@ -503,11 +508,9 @@ button {
   display: none;
 }
 
-
 /* ================================responsividade================================================= */
 
-
-@media screen and (max-width: 800px){
+@media screen and (max-width: 800px) {
   #media,
   #absences,
   #occurrences,
@@ -517,12 +520,7 @@ button {
   }
 }
 
-
-
-
-
-@media screen and (max-width: 550px){
- 
+@media screen and (max-width: 550px) {
   #labelDarkMode {
     width: 45px;
   }
@@ -535,26 +533,25 @@ button {
     width: auto;
   }
 
-#tittleHeader h1{
-  display: none;
-}
+  #tittleHeader h1 {
+    display: none;
+  }
 
-  
-  #user-name{
+  #user-name {
     font-size: 15px;
   }
 
   #area-user #user-name {
     padding-right: 3px;
   }
-  
+
   #area-user #exit {
     width: 35px;
     height: 35px;
     padding: 3px;
   }
 
-/* ================================HEader======================== */
+  /* ================================HEader======================== */
 
   #mainData h1 {
     font-size: 20px;
@@ -563,16 +560,15 @@ button {
   #name h3 {
     font-size: 25px;
   }
-  
-  
+
   #studentPerformance {
-   margin-top: 100px;
+    margin-top: 100px;
   }
-  
+
   #studentPerformance div {
     margin-bottom: 10px;
   }
-  
+
   #media,
   #absences,
   #occurrences,
@@ -580,7 +576,7 @@ button {
     height: 90%;
     width: 90%;
   }
-  
+
   #media h4,
   #absences h4,
   #occurrences h4,
@@ -588,17 +584,17 @@ button {
   .table h4 {
     font-size: 25px;
   }
-  
+
   .table {
     font-size: 15px;
   }
-  
+
   /* =================================TeacherArea======================= */
-  
+
   #searchStudent {
-  height: 800px;
+    height: 800px;
   }
-  
+
   #searchStudent input,
   button,
   select {
@@ -615,10 +611,9 @@ button {
     margin-bottom: 5px;
     width: 80%;
   }
-  
-  #teacher-name{
-   font-size: 15px;
-   padding-right: 3px;
-  }
 
-} 
+  #teacher-name {
+    font-size: 15px;
+    padding-right: 3px;
+  }
+}
